@@ -115,3 +115,12 @@ LEFT JOIN top_categories t \
                THEN CONCAT(COALESCE(t.name_ru, t.name), COALESCE(c.name_ru, c.name)) \
                ELSE CONCAT(t.name, c.name) \
                 END
+
+category.find_from_last_created_series_by_user = \
+   SELECT c.slug \
+     FROM series s \
+     JOIN categories c \
+       ON c.id = s.category_id \
+    WHERE s.created_by = :created_by \
+ ORDER BY s.created_at DESC \
+    LIMIT 1
